<resources>
    <string name="app_name">WaveBite</string>
    <string name="project_title">Deliever Favorite Food</string>
    <string name="designer_name">Design By \nRishi Raj</string>
    <string name="button_name">Next</string>
    <string name="start_Activity_title">Enjoy Restaurant Quality Meals \nat Home</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login To Your Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_hint">What do you want to order</string>
    <string name="food_image_description">Description of the food</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="lorem_ipsum_short">this is short descriptions\nfor multi line\nsupport</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email Id</string>
    <string name="phone">Phone No.</string>
    <string name="save_information">Save Information</string>
    <string name="logout">Logout</string>
    <string name="email_example">demo@gmail.com</string>
    <string name="phone_example">9876543210</string>
    <string name="edit_profile_image">Edit your image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_my_order">Place my order</string>
    <string name="payout_details">PayOut Details</string>
    <string name="feedback">Feedback</string>
    <string name="write_your_notes_here">Write your notes here</string>
</resources>